# reverse-engineering-YJMob100K-grid

./: CITATION.cff  OkabeIto.yaml  README.md  REUSE.toml  plotting_config.yaml  pyproject.toml
LICENSES/: LicenseRef-OSJ.txt
data/census/: README.md  b01_01e.xlsx
data/dfw/: README.md
data/geojson/: admin4_selected.geojson
data/helsinki/: README.txt
data/weeplace/: README.md
data/yjmob100k/: .gitignore  README.md
output/: activity.csv  homes.csv  unique_users.csv  user_activity.csv
src/: calculate_descriptives.py  calculate_grid_complexity.ipynb  common.py  create_lookups.py  dallas.ipynb  detect_homes.ipynb  generate_grid.ipynb  grid_complexity.ipynb  helsinki.ipynb  locate_rescaled_observation_area.ipynb  london.ipynb  plot_grid.ipynb  plot_heatmaps.ipynb  scale_grid.ipynb  top_cell_identifiability.ipynb  validate_home_detection.ipynb
